# europe-flights-portfolio

./: .gitignore  README.md  pyproject.toml
assets/: style.css
setup/: data_download.py  data_ingestion.py  data_update.py
setup/data/icao_iso/: icao_iso.csv
sql/: update_manufacturer_count_summary.sql
src/: app.py  callbacks.py  db.py  layout.py  queries.py
src/pages/: about.py  data.py  home.py
