[project]
name = "europe-flights-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Chalissar Baines",email = "88324631+c-baines@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "dash (>=3.0.4,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
